objects/agf__ADM_Perforce_Connector__c.object
<CustomObject>
    <fields>
        <fullName>agf__Changelist__c</fullName>
        <label>Change List</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Describe__c</fullName>
        <label>Describe</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <description>CL@workId</description>
        <externalId>true</externalId>
        <inlineHelpText>CL@workId</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <label>Release</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Task__c</fullName>
        <label>Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Perforce_Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <label>Work</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__type__c</fullName>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>one</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>two</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Source Control Connector</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>agf__Changelist__c</columns>
        <columns>agf__Describe__c</columns>
        <columns>agf__Release__c</columns>
        <columns>agf__Work__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Perforce Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Control Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>